# obs-websocket

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .remote-sync.json  .travis.yml  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  Config.cpp  Config.h  PROTOCOL.md  README.md  SSL-TUNNELLING.md  Utils.cpp  Utils.h  WSEvents.cpp  WSEvents.h  WSRequestHandler.cpp  WSRequestHandler.h  WSServer.cpp  WSServer.h  appveyor.yml  azure-pipelines.yml  buildspec.json  crowdin.yml  obs-websocket.cpp  obs-websocket.h
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature.yml
.github/scripts/: .Aptfile  .Brewfile  .Wingetfile  .build.zsh  .package.zsh  Build-Windows.ps1  Package-Windows.ps1  build-linux.sh  build-macos.zsh  check-cmake.sh  check-format.sh  package-linux.sh  package-linux.zsh
.github/workflows/: crowdin_upload.yml  generate_docs.yml  lint.yml  main.yml  pr_push.yml  tag_release.yml
CI/: before-build.cmd  before-deploy-xenial.sh  before-script-linux.sh  before-script-osx.sh  build-macos.sh  build-osx.sh  build-package-xenial.sh  build-ubuntu.sh  build-windows.cmd  build-xenial.sh  check-format.sh  checkout-cmake-obs-windows.cmd  download-obs-deps.cmd  generate-docs.sh  install-build-obs-macos.sh  install-build-obs-windows.cmd  install-build-obs.cmd  install-dependencies-linux.sh  install-dependencies-macos.sh  install-dependencies-osx.sh  install-dependencies-ubuntu.sh  install-dependencies-xenial.sh  install-qt-win.cmd  install-setup-qt.cmd  package-macos.sh  package-osx.sh  package-ubuntu.sh  package-windows.cmd  package-xenial.sh  prepare-cmake-windows.cmd  prepare-obs-windows.cmd  prepare-windows.cmd
CI/linux/: build-plugin-ubuntu.sh  install-dependencies-ubuntu.sh  package-plugin-ubuntu.sh
CI/macos/: Brewfile  build-plugin-macos.sh  install-build-obs-macos.sh  install-dependencies-macos.sh  obs-websocket.pkgproj  package-macos.sh  package-plugin-macos.sh  qt.rb
CI/osx/: obs-websocket.pkgproj
CI/windows/: download-obs-deps.cmd  install-qt-win.cmd  prepare-obs-windows.cmd  prepare-plugin-windows.cmd
cmake/: ObsPluginHelpers.cmake  legacy.cmake
data/locale/: af-ZA.ini  ar-SA.ini  az-AZ.ini  be-BY.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-US.ini  es-ES.ini  et-EE.ini  eu-ES.ini  fa-IR.ini  fi-FI.ini  fil-PH.ini  fr-FR.ini  gl-ES.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  hy-AM.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  kmr-TR.ini  ko-KR.ini  lo-LA.ini  ms-MY.ini  nb-NO.ini  nl-NL.ini  pl-PL.ini  pt-BR.ini  pt-PT.ini  ro-RO.ini  ru-RU.ini  si-LK.ini  sk-SK.ini  (+12 more)
docs/: .editorconfig  .gitignore  README.md  build_docs.sh  comments.js  config.json  docs.js  npm-shrinkwrap.json  package-lock.json  package.json  protocol.hbs
docs/docs/: generate_md.py  process_comments.py
docs/partials/: enumsHeader.md  eventsHeader.md  introduction.md  requestsHeader.md  typedefsHeader.md
forms/: settings-dialog.cpp  settings-dialog.h  settings-dialog.ui
installer/: installer-windows.generated.iss  installer-windows.iss.in  installer.iss
lib/: obs-websocket-api.h
lib/example/: simplest-plugin.c
src/: Config.cpp  Config.h  ConnectionProperties.cpp  ConnectionProperties.h  SimpleResult.h  Utils.cpp  Utils.h  WSEvents.cpp  WSEvents.h  WSRequestHandler.cpp  WSRequestHandler.h  WSRequestHandler_ComponantsManagement.cpp  WSRequestHandler_ComponentsManagement.cpp  WSRequestHandler_General.cpp  WSRequestHandler_MediaControl.cpp  WSRequestHandler_Outputs.cpp  WSRequestHandler_Profiles.cpp  WSRequestHandler_Recording.cpp  WSRequestHandler_ReplayBuffer.cpp  WSRequestHandler_SceneCollections.cpp  WSRequestHandler_SceneItems.cpp  WSRequestHandler_Scenes.cpp  WSRequestHandler_Sources.cpp  WSRequestHandler_Streaming.cpp  WSRequestHandler_StudioMode.cpp  WSRequestHandler_Transitions.cpp  WSRequestHandler_VirtualCam.cpp  WSRequestHandler_Wamp.cpp  WSServer.cpp  WSServer.h  WebSocketApi.cpp  WebSocketApi.h  WebSocketProtocol.cpp  WebSocketProtocol.h  WebSocketServer.cpp  WebSocketServer.h  WebSocketServer_Protocol.cpp  WebSocketServer_RequestBatchProcessing.cpp  WebSocketSession.cpp  WebSocketSession.h  (+5 more)
src/Clients/: RemoteClient.h  RemoteClientInfo.cpp  RemoteClientInfo.h
src/Rpc/: JsonRpc.cpp  JsonRpc.h  RpcError.cpp  RpcError.h  RpcHandler.cpp  RpcHandler.h  RpcMethod.h  RpcRequest.cpp  RpcRequest.h  RpcResponse.cpp  RpcResponse.h
src/eventhandler/: EventHandler.cpp  EventHandler.h  EventHandler_Canvases.cpp  EventHandler_Config.cpp  EventHandler_Filters.cpp  EventHandler_General.cpp  EventHandler_InputVolumeMeters.cpp  EventHandler_Inputs.cpp  EventHandler_MediaInputs.cpp  EventHandler_Outputs.cpp  EventHandler_SceneItems.cpp  EventHandler_Scenes.cpp  EventHandler_Transitions.cpp  EventHandler_Ui.cpp
src/forms/: ConnectInfo.cpp  ConnectInfo.h  ConnectInfo.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  settings-dialog.cpp  settings-dialog.h  settings-dialog.ui
src/http/: HttpRouter.cpp  HttpRouter.h  HttpUtils.cpp  HttpUtils.h
src/legacy/: WSEvents.cpp  WSEvents.h  WSRequestHandler.cpp  WSRequestHandler.h  WSRequestHandler_General.cpp  WSRequestHandler_Profiles.cpp  WSRequestHandler_Recording.cpp  WSRequestHandler_ReplayBuffer.cpp  WSRequestHandler_SceneCollections.cpp  WSRequestHandler_SceneItems.cpp  WSRequestHandler_Scenes.cpp  WSRequestHandler_Sources.cpp  WSRequestHandler_Streaming.cpp  WSRequestHandler_StudioMode.cpp  WSRequestHandler_Transitions.cpp
src/protocol/: OBSRemoteProtocol.cpp  OBSRemoteProtocol.h
src/requesthandler/: RequestBatchHandler.cpp  RequestBatchHandler.h  RequestHandler.cpp  RequestHandler.h  RequestHandler_Canvases.cpp  RequestHandler_Config.cpp  RequestHandler_Filters.cpp  RequestHandler_General.cpp  RequestHandler_Inputs.cpp  RequestHandler_MediaInputs.cpp  RequestHandler_Outputs.cpp  RequestHandler_Record.cpp  RequestHandler_SceneItems.cpp  RequestHandler_Scenes.cpp  RequestHandler_Sources.cpp  RequestHandler_Stream.cpp  (+2 more)
test/: init.ts  obs.ts  package-lock.json  package.json  tsconfig.json
(+102 files in other folders)
